--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://kimimaro.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://blog.oneboxapp.com
+title: '402'
+subtitle: iOS Objective-C Swift.
+author: Kimimaro
 simple_search: https://www.google.com/search
 description:
 
@@ -27,13 +27,15 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /blog/:year:month:day/:title/
 source: source
 destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
+category_title_prefix: "分类：" # 修改分类前缀
 markdown: rdiscount
+excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 rdiscount:
   extensions:
     - autolink
