--- a/_config.yml
+++ b/_config.yml
@@ -34,13 +34,12 @@ plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
 category_title_prefix: "分类：" # 修改分类前缀
-markdown: rdiscount
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
-rdiscount:
-  extensions:
-    - autolink
-    - footnotes
-    - smart
+markdown: kramdown
+# rdiscount:
+#   extensions:
+#     - autolink
+#     - footnotes
+#     - smart
 highlighter: pygments # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
