--- a/_config.yml
+++ b/_config.yml
@@ -65,13 +65,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: "kimimaro"
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: "kimirius"
 twitter_tweet_button: true
 
 # Google +1
@@ -92,7 +92,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: "kimimaro"
 disqus_show_comment_count: false
 
 # Google Analytics
@@ -108,3 +108,7 @@ email_md5: 'c56d402092b54cba7b9c5c4927ea123d'
 default_asides: []
 sidebar: collapse
 portrait: true
+
+#HPSTR
+css_dir: "source/stylesheets"
+sass_dir: "sass"
