--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: '402'
 subtitle: iOS Objective-C Swift.
 author: Kimimaro
 simple_search: https://www.google.com/search
-description:
+description: ">_<"
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -100,7 +100,7 @@ delicious_count: 3
 
 # Disqus Comments
 disqus_short_name: "kimimaro"
-disqus_show_comment_count: false
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
