--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ disqus_short_name: "kimimaro"
 disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: "UA-64568626-1"
 
 # Facebook Like
 facebook_like: false
