--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,18 @@ url: http://blog.oneboxapp.com
 title: '402'
 subtitle: iOS Objective-C Swift.
 author: Kimimaro
-simple_search: https://www.google.com/search
+simple_search: #http://www.duckduckgo.com/ #https://www.google.com/search
 description: ">_<"
+keywords: "iOS,developer,Objective-C,Baidu,编程"
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
 date_format: "ordinal"
+
+# lunr search
+lunr_search: true
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
@@ -52,7 +56,7 @@ highlighter: pygments # default python pygments have been replaced by pygments.r
 paginate: 10          # Posts per page on the blog index
 paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "继续阅读 &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 excerpt_separator: "<!--more-->"
 
 titlecase: true       # Converts page and post titles to titlecase
@@ -135,3 +139,18 @@ portrait: true
 #HPSTR
 css_dir: "source/stylesheets"
 sass_dir: "sass"
+
+# Plugin: jekyll-assets
+assets:
+  dirname: blog/assets
+  baseurl: http://localhost:4000/blog/assets/
+  sources:
+    - _assets/images
+    - _assets/javascripts
+    - _assets/jwplayer
+    - _assets/stylesheets
+  compress:
+    js:   'yui'
+    css:  'yui'
+  cachebust: hard
+  gzip: [ text/css, application/javascript ]
