--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: '402'
 subtitle: iOS Objective-C Swift.
 author: Kimimaro
 simple_search: #http://www.duckduckgo.com/ #https://www.google.com/search
-description: ">_<"
+description: "这个世界已经开放到没有门槛，不成功，只可能是你的能力不够。"
 keywords: "iOS,developer,Objective-C,Baidu,编程"
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
